--- a/.github/workflows/release-homebrew.yml
+++ b/.github/workflows/release-homebrew.yml
@@ -22,8 +22,8 @@ jobs:
           commit_email: support@mprove.io
           install: |
             bin.install "mprove"
-          test: |
-            assert_match "mproveCLI", shell_output("#{bin}/mprove version")
+          # test: |
+          #   assert_match "mproveCLI", shell_output("#{bin}/mprove version")
           target_darwin_amd64: true
           target_darwin_arm64: true
           # target_linux_amd64: true
